	PR c++/7910 	* config/i386/winnt.c (i386_pe_mark_dllimport): Fix thinko.

PR c++/7910
	* g++.dg/ext/dllimport1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@65519 138bc75d-0d04-0410-961f-82ee72b054a4