gcc/config/i386/winnt.c
@@ -273,7 +273,7 @@ i386_pe_mark_dllimport (decl)
   const char *oldname;
   char  *newname;
   tree idp;
-  rtx rtlname, newrtl;
+  rtx rtlname;
 
   rtlname = XEXP (DECL_RTL (decl), 0);
   if (GET_CODE (rtlname) == SYMBOL_REF)
@@ -335,10 +335,8 @@ i386_pe_mark_dllimport (decl)
      identical.  */
   idp = get_identifier (newname);
 
-  newrtl = gen_rtx (MEM, Pmode,
-		    gen_rtx (SYMBOL_REF, Pmode,
-			     IDENTIFIER_POINTER (idp)));
-  XEXP (DECL_RTL (decl), 0) = newrtl;
+  XEXP (DECL_RTL (decl), 0) 
+    = gen_rtx_SYMBOL_REF (Pmode, IDENTIFIER_POINTER (idp));
 
   /* Can't treat a pointer to this as a constant address */
   DECL_NON_ADDR_CONST_P (decl) = 1;
